<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDiscounts">

    <TextView
        android:id="@+id/tv_showDiscounts_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showDiscounts_pageTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/brown_100"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/AfisareOferte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.064" />

    <ListView
        android:id="@+id/AfisareOferte"
        android:layout_width="306dp"
        android:layout_height="187dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/InserareOferta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_showDiscounts_title"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/InserareOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleInsertDiscount"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/EditareOferta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AfisareOferte" />

    <Button
        android:id="@+id/EditareOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditDiscount"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/StergereOferta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InserareOferta" />

    <Button
        android:id="@+id/StergereOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDeleteDiscount"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditareOferta" />

</androidx.constraintlayout.widget.ConstraintLayout>