<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertDiscount">

    <TextView
        android:id="@+id/tv_insertDiscount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertDiscount_pageTitle"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/brown_100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.064" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_insertDiscount_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_insertDiscount_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_insertDiscount_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:hint="@string/insertDiscount_titleHint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_insertDiscount_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_insertDiscount_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_insertDiscount_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:hint="@string/insertDiscount_descriptionHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_insertDiscount_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_insertDiscount_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_insertDiscount_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:hint="@string/insertDiscount_percentageHint"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_insertDiscount_cardNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_insertDiscount_percentage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_insertDiscount_cardNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:hint="@string/insertDiscount_cardNoHint"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_insertDiscount_addDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertDiscount_pageTitle"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_insertDiscount_cardNo"
        app:layout_constraintVertical_bias="0.889" />

</androidx.constraintlayout.widget.ConstraintLayout>