<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertPartner">

    <TextView
        android:id="@+id/tv_insertPartner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertPartner_pageTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/brown_100"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.064" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_insertPartner_partnerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_insertPartner_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_insertPartner_partnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:hint="@string/insertCard_partnerNameHint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_insertPartner_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_insertPartner_partnerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_insertPartner_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:hint="@string/insertPartner_addressHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_insertPartner_cui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_insertPartner_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_insertPartner_cui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:hint="@string/insertPartner_cuiHint" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_insertPartner_addPartner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertPartner_pageTitle"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_insertPartner_cui"
        app:layout_constraintVertical_bias="0.889" />


</androidx.constraintlayout.widget.ConstraintLayout>